--- a/Kernel64/Makefile
+++ b/Kernel64/Makefile
@@ -1,6 +1,6 @@
 # Set Configuration
 NASM64 = nasm -f elf64
-GCC64 = gcc -c -m64 -ffreestanding
+GCC64 = gcc -I../../ext -c -m64 -ffreestanding
 LD64 = ld -melf_x86_64 -T ../elf_x86_64.x -nostdlib -e Main -Ttext 0x200000
 OBJCOPY64 = objcopy -j .text -j .data -j .rodata -j .bss -S -O binary
 
